--- a/CooksBlog/Views/Shared/_PostTemplate.cshtml
+++ b/CooksBlog/Views/Shared/_PostTemplate.cshtml
@@ -1,4 +1,4 @@
-﻿@model CooksBlog.Objects.Post
+﻿@model CooksBlog.Core.Objects.Post
 
 <div class="post">
     <div class="post-meta">
@@ -28,6 +28,7 @@
             </div>
         </div>
     </div>
+
     <!--Short Description-->
     <div class="post-body">
         @Html.Raw(Model.ShortDescription)
