--- a/CooksBlog/App_Code/Helpers.cshtml
+++ b/CooksBlog/App_Code/Helpers.cshtml
@@ -1,4 +1,4 @@
-﻿@helper Tags(System.Web.Mvc.HtmlHelper htmlHelper, IList<CooksBlog.Objects.Tag> tags)
+﻿@helper Tags(System.Web.Mvc.HtmlHelper htmlHelper, IList<CooksBlog.Core.Objects.Tag> tags)
 {
     foreach (var tag in tags)
     {
